--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="bio">
-          <h1>Willkommen an der BTA</h1>
+          <h1>Ich schlafe gleich ein</h1>
         </div>
 
         <div class="network">
